src/bnfc/ParFrappe.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.11 from ParFrappe.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListStmt                                (4)
	Stmt -> 'func' Ident ':' '(' ListArg ')' '->' Type Block   (5)
	Stmt -> ';'                                        (6)
	Stmt -> Block                                      (7)
	Stmt -> ListItem ':' Type ';'                      (8)
	Stmt -> Stmt1                                      (9)
	Stmt -> Expr ';'                                   (10)
	Stmt -> Ident '++' ';'                             (11)
	Stmt -> Ident '--' ';'                             (12)
	Stmt -> 'return' Expr ';'                          (13)
	Stmt -> 'return' ';'                               (14)
	Stmt -> 'if' '(' Expr ')' Block                    (15)
	Stmt -> 'if' '(' Expr ')' Block 'else' Block       (16)
	Stmt -> 'while' '(' Expr ')' Block                 (17)
	Stmt -> 'print' '(' ListExpr ')' ';'               (18)
	Arg -> Ident ':' Type                              (19)
	Arg -> Ident ':' '@' Type                          (20)
	ListArg ->                                         (21)
	ListArg -> Arg                                     (22)
	ListArg -> Arg ',' ListArg                         (23)
	Index -> Expr                                      (24)
	ListIndex ->                                       (25)
	ListIndex -> Index                                 (26)
	ListIndex -> Index ',' ListIndex                   (27)
	Block -> '{' ListStmt '}'                          (28)
	ListStmt ->                                        (29)
	ListStmt -> Stmt ListStmt                          (30)
	Item -> Ident                                      (31)
	Item -> Ident '[' ListIndex ']'                    (32)
	ListItem -> Item                                   (33)
	ListItem -> Item ',' ListItem                      (34)
	Stmt1 -> LeftSideAss '=' Expr ';'                  (35)
	LeftSideAss -> Ident                               (36)
	LeftSideAss -> Ident '[' ListIndex ']'             (37)
	Type -> 'int'                                      (38)
	Type -> 'string'                                   (39)
	Type -> 'bool'                                     (40)
	Type -> 'void'                                     (41)
	Type -> '(' ListType ')' '->' Type                 (42)
	Type -> 'array' '[' ListIndex ']' Type             (43)
	ListType ->                                        (44)
	ListType -> Type                                   (45)
	ListType -> Type ',' ListType                      (46)
	Expr6 -> Ident                                     (47)
	Expr6 -> Ident '[' ListIndex ']'                   (48)
	Expr6 -> Integer                                   (49)
	Expr6 -> 'true'                                    (50)
	Expr6 -> 'false'                                   (51)
	Expr6 -> Ident '(' ListExpr ')'                    (52)
	Expr6 -> String                                    (53)
	Expr6 -> '(' Expr ')'                              (54)
	Expr5 -> '-' Expr6                                 (55)
	Expr5 -> '!' Expr6                                 (56)
	Expr5 -> Expr6                                     (57)
	Expr4 -> Expr4 MulOp Expr5                         (58)
	Expr4 -> Expr5                                     (59)
	Expr3 -> Expr3 AddOp Expr4                         (60)
	Expr3 -> Expr4                                     (61)
	Expr2 -> Expr2 RelOp Expr3                         (62)
	Expr2 -> Expr3                                     (63)
	Expr1 -> Expr2 '&&' Expr1                          (64)
	Expr1 -> Expr2                                     (65)
	Expr -> Expr1 '||' Expr                            (66)
	Expr -> 'lambda:' '(' ListArg ')' '->' Type Block   (67)
	Expr -> Expr1                                      (68)
	ListExpr ->                                        (69)
	ListExpr -> Expr                                   (70)
	ListExpr -> Expr ',' ListExpr                      (71)
	AddOp -> '+'                                       (72)
	AddOp -> '-'                                       (73)
	MulOp -> '*'                                       (74)
	MulOp -> '/'                                       (75)
	MulOp -> '%'                                       (76)
	RelOp -> '<'                                       (77)
	RelOp -> '<='                                      (78)
	RelOp -> '>'                                       (79)
	RelOp -> '>='                                      (80)
	RelOp -> '=='                                      (81)
	RelOp -> '!='                                      (82)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'->'           { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	':'            { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'@'            { PT _ (TS _ 23) }
	'['            { PT _ (TS _ 24) }
	']'            { PT _ (TS _ 25) }
	'array'        { PT _ (TS _ 26) }
	'bool'         { PT _ (TS _ 27) }
	'else'         { PT _ (TS _ 28) }
	'false'        { PT _ (TS _ 29) }
	'func'         { PT _ (TS _ 30) }
	'if'           { PT _ (TS _ 31) }
	'int'          { PT _ (TS _ 32) }
	'lambda:'      { PT _ (TS _ 33) }
	'print'        { PT _ (TS _ 34) }
	'return'       { PT _ (TS _ 35) }
	'string'       { PT _ (TS _ 36) }
	'true'         { PT _ (TS _ 37) }
	'void'         { PT _ (TS _ 38) }
	'while'        { PT _ (TS _ 39) }
	'{'            { PT _ (TS _ 40) }
	'||'           { PT _ (TS _ 41) }
	'}'            { PT _ (TS _ 42) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	Stmt            rules 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18
	Arg             rules 19, 20
	ListArg         rules 21, 22, 23
	Index           rule  24
	ListIndex       rules 25, 26, 27
	Block           rule  28
	ListStmt        rules 29, 30
	Item            rules 31, 32
	ListItem        rules 33, 34
	Stmt1           rule  35
	LeftSideAss     rules 36, 37
	Type            rules 38, 39, 40, 41, 42, 43
	ListType        rules 44, 45, 46
	Expr6           rules 47, 48, 49, 50, 51, 52, 53, 54
	Expr5           rules 55, 56, 57
	Expr4           rules 58, 59
	Expr3           rules 60, 61
	Expr2           rules 62, 63
	Expr1           rules 64, 65
	Expr            rules 66, 67, 68
	ListExpr        rules 69, 70, 71
	AddOp           rules 72, 73
	MulOp           rules 74, 75, 76
	RelOp           rules 77, 78, 79, 80, 81, 82

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'!'            shift, and enter state 21
	'('            shift, and enter state 22
	'-'            shift, and enter state 23
	';'            shift, and enter state 24
	'false'        shift, and enter state 25
	'func'         shift, and enter state 26
	'if'           shift, and enter state 27
	'lambda:'      shift, and enter state 28
	'print'        shift, and enter state 29
	'return'       shift, and enter state 30
	'true'         shift, and enter state 31
	'while'        shift, and enter state 32
	'{'            shift, and enter state 33
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 34
	L_quoted       shift, and enter state 35
	%eof           reduce using rule 29

	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	Program        goto state 6
	Stmt           goto state 7
	Block          goto state 8
	ListStmt       goto state 9
	Item           goto state 10
	ListItem       goto state 11
	Stmt1          goto state 12
	LeftSideAss    goto state 13
	Expr6          goto state 14
	Expr5          goto state 15
	Expr4          goto state 16
	Expr3          goto state 17
	Expr2          goto state 18
	Expr1          goto state 19
	Expr           goto state 20

State 1


	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'||'           reduce using rule 1


State 3

	Stmt -> Ident . '++' ';'                            (rule 11)
	Stmt -> Ident . '--' ';'                            (rule 12)
	Item -> Ident .                                     (rule 31)
	Item -> Ident . '[' ListIndex ']'                   (rule 32)
	LeftSideAss -> Ident .                              (rule 36)
	LeftSideAss -> Ident . '[' ListIndex ']'            (rule 37)
	Expr6 -> Ident .                                    (rule 47)
	Expr6 -> Ident . '[' ListIndex ']'                  (rule 48)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 52)

	'!='           reduce using rule 47
	'%'            reduce using rule 47
	'&&'           reduce using rule 47
	'('            shift, and enter state 69
	'*'            reduce using rule 47
	'+'            reduce using rule 47
	'++'           shift, and enter state 70
	','            reduce using rule 31
	'-'            reduce using rule 47
	'--'           shift, and enter state 71
	'/'            reduce using rule 47
	':'            reduce using rule 31
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'='            reduce using rule 36
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'['            shift, and enter state 72
	'||'           reduce using rule 47


State 4

	Expr6 -> Integer .                                  (rule 49)

	'!='           reduce using rule 49
	'%'            reduce using rule 49
	'&&'           reduce using rule 49
	')'            reduce using rule 49
	'*'            reduce using rule 49
	'+'            reduce using rule 49
	','            reduce using rule 49
	'-'            reduce using rule 49
	'/'            reduce using rule 49
	';'            reduce using rule 49
	'<'            reduce using rule 49
	'<='           reduce using rule 49
	'=='           reduce using rule 49
	'>'            reduce using rule 49
	'>='           reduce using rule 49
	']'            reduce using rule 49
	'||'           reduce using rule 49


State 5

	Expr6 -> String .                                   (rule 53)

	'!='           reduce using rule 53
	'%'            reduce using rule 53
	'&&'           reduce using rule 53
	')'            reduce using rule 53
	'*'            reduce using rule 53
	'+'            reduce using rule 53
	','            reduce using rule 53
	'-'            reduce using rule 53
	'/'            reduce using rule 53
	';'            reduce using rule 53
	'<'            reduce using rule 53
	'<='           reduce using rule 53
	'=='           reduce using rule 53
	'>'            reduce using rule 53
	'>='           reduce using rule 53
	']'            reduce using rule 53
	'||'           reduce using rule 53


State 6

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 7

	ListStmt -> Stmt . ListStmt                         (rule 30)

	'!'            shift, and enter state 21
	'('            shift, and enter state 22
	'-'            shift, and enter state 23
	';'            shift, and enter state 24
	'false'        shift, and enter state 25
	'func'         shift, and enter state 26
	'if'           shift, and enter state 27
	'lambda:'      shift, and enter state 28
	'print'        shift, and enter state 29
	'return'       shift, and enter state 30
	'true'         shift, and enter state 31
	'while'        shift, and enter state 32
	'{'            shift, and enter state 33
	'}'            reduce using rule 29
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 34
	L_quoted       shift, and enter state 35
	%eof           reduce using rule 29

	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	Stmt           goto state 7
	Block          goto state 8
	ListStmt       goto state 68
	Item           goto state 10
	ListItem       goto state 11
	Stmt1          goto state 12
	LeftSideAss    goto state 13
	Expr6          goto state 14
	Expr5          goto state 15
	Expr4          goto state 16
	Expr3          goto state 17
	Expr2          goto state 18
	Expr1          goto state 19
	Expr           goto state 20

State 8

	Stmt -> Block .                                     (rule 7)

	'!'            reduce using rule 7
	'('            reduce using rule 7
	'-'            reduce using rule 7
	';'            reduce using rule 7
	'false'        reduce using rule 7
	'func'         reduce using rule 7
	'if'           reduce using rule 7
	'lambda:'      reduce using rule 7
	'print'        reduce using rule 7
	'return'       reduce using rule 7
	'true'         reduce using rule 7
	'while'        reduce using rule 7
	'{'            reduce using rule 7
	'}'            reduce using rule 7
	L_Ident        reduce using rule 7
	L_integ        reduce using rule 7
	L_quoted       reduce using rule 7
	%eof           reduce using rule 7


State 9

	Program -> ListStmt .                               (rule 4)

	%eof           reduce using rule 4


State 10

	ListItem -> Item .                                  (rule 33)
	ListItem -> Item . ',' ListItem                     (rule 34)

	','            shift, and enter state 67
	':'            reduce using rule 33


State 11

	Stmt -> ListItem . ':' Type ';'                     (rule 8)

	':'            shift, and enter state 66


State 12

	Stmt -> Stmt1 .                                     (rule 9)

	'!'            reduce using rule 9
	'('            reduce using rule 9
	'-'            reduce using rule 9
	';'            reduce using rule 9
	'false'        reduce using rule 9
	'func'         reduce using rule 9
	'if'           reduce using rule 9
	'lambda:'      reduce using rule 9
	'print'        reduce using rule 9
	'return'       reduce using rule 9
	'true'         reduce using rule 9
	'while'        reduce using rule 9
	'{'            reduce using rule 9
	'}'            reduce using rule 9
	L_Ident        reduce using rule 9
	L_integ        reduce using rule 9
	L_quoted       reduce using rule 9
	%eof           reduce using rule 9


State 13

	Stmt1 -> LeftSideAss . '=' Expr ';'                 (rule 35)

	'='            shift, and enter state 65


State 14

	Expr5 -> Expr6 .                                    (rule 57)

	'!='           reduce using rule 57
	'%'            reduce using rule 57
	'&&'           reduce using rule 57
	')'            reduce using rule 57
	'*'            reduce using rule 57
	'+'            reduce using rule 57
	','            reduce using rule 57
	'-'            reduce using rule 57
	'/'            reduce using rule 57
	';'            reduce using rule 57
	'<'            reduce using rule 57
	'<='           reduce using rule 57
	'=='           reduce using rule 57
	'>'            reduce using rule 57
	'>='           reduce using rule 57
	']'            reduce using rule 57
	'||'           reduce using rule 57


State 15

	Expr4 -> Expr5 .                                    (rule 59)

	'!='           reduce using rule 59
	'%'            reduce using rule 59
	'&&'           reduce using rule 59
	')'            reduce using rule 59
	'*'            reduce using rule 59
	'+'            reduce using rule 59
	','            reduce using rule 59
	'-'            reduce using rule 59
	'/'            reduce using rule 59
	';'            reduce using rule 59
	'<'            reduce using rule 59
	'<='           reduce using rule 59
	'=='           reduce using rule 59
	'>'            reduce using rule 59
	'>='           reduce using rule 59
	']'            reduce using rule 59
	'||'           reduce using rule 59


State 16

	Expr4 -> Expr4 . MulOp Expr5                        (rule 58)
	Expr3 -> Expr4 .                                    (rule 61)

	'!='           reduce using rule 61
	'%'            shift, and enter state 62
	'&&'           reduce using rule 61
	')'            reduce using rule 61
	'*'            shift, and enter state 63
	'+'            reduce using rule 61
	','            reduce using rule 61
	'-'            reduce using rule 61
	'/'            shift, and enter state 64
	';'            reduce using rule 61
	'<'            reduce using rule 61
	'<='           reduce using rule 61
	'=='           reduce using rule 61
	'>'            reduce using rule 61
	'>='           reduce using rule 61
	']'            reduce using rule 61
	'||'           reduce using rule 61

	MulOp          goto state 61

State 17

	Expr3 -> Expr3 . AddOp Expr4                        (rule 60)
	Expr2 -> Expr3 .                                    (rule 63)
